--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build":"next build",
-    "start":"next start"
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,6 @@
   "devDependencies": {
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
-    "typescript": "5.5.3"
+    "typescript": "^5.5.3"
   }
 }
